支払い読み出し用のエンドポイント定義追加
